# dolfin-cut-ds-no-lfs

./: CMakeLists.txt  Dockerfile
cmake/templates/: UseDOLFIN.cmake.in
demo/: CMakeLists.txt
demo/undocumented/multimesh-3d/cpp/: main.cpp
docker/: Dockerfile  test_dolfin.sh  test_geometry.sh  test_multimesh.sh
dolfin/: CMakeLists.txt  dolfin_simplex_tools.h
dolfin/fem/: MultiMeshAssembler.cpp  MultiMeshAssembler.h  UFC.cpp  UFC.h  dolfin_simplex_tools.h
dolfin/function/: MultiMeshFunction.cpp  MultiMeshFunction.h
dolfin/geometry/: CGALExactArithmetic.h  CGALPredicates.h  CMakeLists.txt  CollisionPredicates.cpp  CollisionPredicates.h  ConvexTriangulation.cpp  ConvexTriangulation.h  GeometryDebugging.cpp  GeometryDebugging.h  GeometryPredicates.cpp  GeometryPredicates.h  GeometryTools.h  IntersectionConstruction.cpp  IntersectionConstruction.h  Point.cpp  Point.h  SimplexQuadrature.cpp  SimplexQuadrature.h  SimplexQuadratureCompression.cpp  SimplexQuadratureCompression.h  SimplexQuadratureTables.cpp  SimplexQuadratureTables.h  dolfin_geometry.h  intersect.cpp  predicates.cpp  predicates.h
dolfin/io/: VTKFile.cpp  VTKWriter.cpp
dolfin/la/: PETScMatrix.cpp
dolfin/log/: LogStream.cpp  LogStream.h
dolfin/mesh/: MeshQuality.cpp  MultiMesh.cpp  MultiMesh.h
optims/: Dockerfile
optims/geometry/: CGALExactArithmetic.h  CollisionPredicates.cpp  CollisionPredicates.h  ConvexTriangulation.h  GeometryPredicates.h  GeometryTools.h  IntersectionConstruction.cpp  IntersectionConstruction.h  Point.h  SimplexQuadrature.cpp  SimplexQuadrature.h  SimplexQuadratureCompression.cpp  SimplexQuadratureCompression.h  SimplexQuadratureTables.h  predicates.cpp
python/dolfin/: __init__.py
python/dolfin/fem/: norms.py
python/dolfin/function/: multimeshfunction.py  multimeshfunctionspace.py
python/src/: geometry.cpp  mesh.cpp
python/test/unit/: conftest.py  pytest.ini
python/test/unit/function/: test_function_space_product.py
python/test/unit/geometry/: test_collision_detection.py  test_geometry_issues.py  test_intersection.py  test_intersection_construction.py
python/test/unit/mesh/: test_multimesh_unit.py
python/test/unit/multimesh/: test_interface_area.py  test_multimesh.py  test_multimesh_dsC.py  test_multimesh_initialization.py  test_multimesh_solve.py  test_volume.py
test/unit/cpp/: CMakeLists.txt
test/unit/cpp/geometry/: testCGALComparison.cpp  testCollisionPredicates.cpp  testConvexTriangulation.cpp  testIntersectionConstruction.cpp  testSimplexQuadrature.cpp
test/unit/cpp/io/: XMLMeshValueCollection.cpp
test/unit/cpp/mesh/: MultiMesh.cpp
test/unit/python/mesh/: test_meshview.py
